--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lucide": "^0.400.0",
     "lucide-react": "^0.400.0",
     "mongoose": "^8.4.5",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.5",
@@ -29,9 +29,12 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3"
   }
 }
