--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
